[FIX] Updated outputs relative to new robot electronics, fixed library issues (returned to basic paths)

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 # Project specific information
-package=org.usfirst.frc.team5910.robot
+package=com.team5910.frc2017.robot
 robot.class=${package}.Robot
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
