--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,10 @@
 	<classpathentry kind="lib" path="lib/wpilib/WPILib.jar"/>
 	<classpathentry kind="lib" path="lib/ctrlib/CTRLib.jar"/>
 	<classpathentry kind="lib" path="lib/gson/gson.jar"/>
+	<classpathentry kind="var" path="wpilib" sourcepath="wpilib.sources"/>
+	<classpathentry kind="var" path="networktables" sourcepath="networktables.sources"/>
+	<classpathentry kind="var" path="opencv" sourcepath="opencv.sources"/>
+	<classpathentry kind="var" path="cscore" sourcepath="cscore.sources"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
