Paradigme controleur/modele sur le robot

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 # Project specific information
 package=com.team5910.frc2017.robot
-robot.class=${package}.Robot
+robot.class=${package}.RobotControleur
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
